package com.saraylg.matchmaker.matchmaker.model;

public enum GameMode {
    CASUAL,
    COMPETITIVE,
    COMPLETIST
}