package com.saraylg.matchmaker.matchmaker.model.enums;

public enum JamState {
    OPEN, // Cuando se crea, por defecto el estado es OPEN
    FULL,
    FINISHED
}
