package com.saraylg.matchmaker.matchmaker.model.enums;

public enum Languages {
    INDEF,
    ES,
    EN,
    FR,
    PT,
    IT
}
