package com.saraylg.matchmaker.matchmaker.model.enums;

public enum VoiceMode {
    TEXT,
    HEAR,
    TALK,
}
